# travel-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  travel-agent.spec.md
brain/: README.md  pyproject.toml
brain/app/: main.py
docs/: MODULE_CREATION_GUIDE.md
prisma/: schema.prisma
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
src/auth/: clerk.factory.ts  clerk.module.ts  clerk.provider.ts  clerk.strategy.ts
src/common/contants/: index.ts
src/common/decorators/: api-response.decorator.ts  sub.decorator.ts
src/common/filters/prisma-client-exception/: prisma-client-exception.filter.ts
src/common/guards/: auth-guard.ts
src/config/: config.module.ts  env.config.ts
src/prisma/: prisma.service.ts
src/redis/: redis.controller.ts  redis.module.ts  redis.service.ts
src/redis/dto/: cache-metrics.dto.ts
src/swagger/: swagger.config.ts
src/swagger/schemas/: error.schema.ts
src/user/: user.controller.ts  user.service.ts
src/user/dto/: response.dto.ts
src/user/interfaces/: index.ts
src/user/utils/: user.mapper.ts
src/webhook/: webhook.controller.ts  webhook.service.ts
src/webhook/interfaces/: index.ts
