[project]
name = "travel-agent-brain"
version = "0.1.0"
description = "FastAPI Brain service for the Travel Agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
